# lmu-pitwall

./: .bash_history  .gitignore  LICENSE  Makefile  README.md
.cache/claude-cli-nodejs/-work/mcp-logs-claude-ai-Gmail/: 2026-05-03T05-28-50-867Z.jsonl  2026-05-03T07-28-51-631Z.jsonl  2026-05-03T13-30-05-813Z.jsonl  2026-05-03T13-33-06-062Z.jsonl  2026-05-03T18-47-45-043Z.jsonl  2026-05-04T11-17-37-536Z.jsonl  2026-05-05T17-41-54-126Z.jsonl  2026-05-13T04-15-37-504Z.jsonl  2026-05-14T16-28-19-678Z.jsonl  2026-05-16T09-50-20-302Z.jsonl  2026-05-18T04-17-55-726Z.jsonl  2026-05-22T06-06-46-108Z.jsonl  2026-05-22T18-43-50-977Z.jsonl  2026-05-23T10-16-26-965Z.jsonl
.cache/zig/tmp/: 45ee6f2edd8eec56-.intentionally-empty-file.obj.d  7809b82fea098af0-17890606064876996623detect_compiler_family.obj.d  c90e6ecb0f882197-2458642495475399917detect_compiler_family.obj.d  c9ecb67d255bd73-.intentionally-empty-file.obj.d  fbba1d8f3561b8e0-4963913181906655405detect_compiler_family.obj.d
.cargo/: .global-cache
.local/share/applications/: claude-code-url-handler.desktop
bridge/: Cargo.toml  build.rs
bridge/src/: app_config.rs  assets.rs  config.rs  garage_api.rs  http_server.rs  lap_tracker.rs  main.rs
bridge/src/electronics/: mod.rs
bridge/src/fuel/: mod.rs
bridge/src/fuel_calculator/: api.rs  mod.rs  queries.rs  types.rs
bridge/src/input/: joystick.rs  keyboard.rs  mod.rs
bridge/src/post_race/: api.rs  database.rs  importer.rs  mod.rs  xml_parser.rs
bridge/src/protocol/: messages.rs
bridge/src/race_engineer/: README.md  api.rs  audio.rs  config.rs  mod.rs  paths.rs  piper_binary.rs  state.rs  tts_engine.rs  voice_manager.rs
bridge/src/race_engineer/rules/: damage_rules.rs  dispatcher.rs  flag_rules.rs  fuel_rules.rs  mod.rs  pace_rules.rs  pit_rules.rs  position_rules.rs  session_rules.rs  templates.rs  tire_rules.rs  weather_rules.rs
bridge/src/rest_api/: client.rs
bridge/src/shared_memory/: reader.rs  types.rs
bridge/src/websocket/: server.rs
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: BindingDialog.tsx  FuelCalculator.tsx  PostRaceResults.tsx  Settings.tsx  Toolbar.tsx  WidgetGrid.tsx  WidgetWrapper.tsx  widgetRegistry.tsx
dashboard/src/hooks/: useWebSocket.ts
dashboard/src/stores/: electronicsConfigStore.ts  layoutStore.ts  settingsStore.ts  telemetryStore.ts
dashboard/src/styles/: theme.ts
dashboard/src/types/: telemetry.ts
dashboard/src/utils/: bridge.ts  classColors.ts  damage.ts  lapFormat.ts
installer/: lmu-pitwall-installer.iss
scripts/: bump-version.py  install-innosetup.sh  install-innosetup.sh.bak  release.sh
shared/: protocol.md
test_data/: 2026_03_14_15_10_16-80R1.xml
(+89 files in other folders)
