[package]
name = "lmu-pitwall"
version = "1.1.19"
edition = "2021"
description = "Real-time sim racing dashboard for Le Mans Ultimate"
authors = ["Swizzjack"]
license = "MIT"

[[bin]]
name = "lmu-pitwall"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
rust-embed = { version = "8" }
open = "5"
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
quick-xml = { version = "0.37", features = ["encoding"] }
sha2 = "0.10"
hex = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"
bitflags = "2"
rand = "0.8"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
